Horizontal Scroll fixed

--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -1,7 +1,7 @@
 .nav {
     background-color: #D3B99F;
     opacity: 0.7;
-    width: 100vw;
+    width: inherit;
     height: 10vh;
     /* background-size: cover;
     background-position: center;
