--- a/frontend/src/components/welcome/Welcome.css
+++ b/frontend/src/components/welcome/Welcome.css
@@ -5,7 +5,7 @@
     background-image: url('../../../public/assets/images/bg.jpeg');
     /* background-color: blue; */
     opacity: 0.7;
-    width: 100vw;
+    width: inherit;
     height: 90vh;
     background-size: cover;
     top: 10vh;
@@ -59,7 +59,9 @@
     position: relative;
     left:10vw;
     right:10vw;
-    top:5vh
+    top:5vh;
+    width:80vw;
+    margin-right: 0 !important;
 }
 
 .section-title{
